# woodstock-backup

./: .directory  .dockerignore  .drone.yml  .gitattributes  .npmrc  .prettierrc  .releaserc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.ts  lerna.json  package-lock.json  package.json  rush.json  semantic_release_output.txt  tsconfig.json  woodstock-backup.code-workspace  woodstock-rust-backup.code-workspace
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
backuppc-importer-rs/: Cargo.toml
backuppc-importer-rs/src/: backuppc_client.rs  main.rs
backuppc_importer/: Cargo.toml
backuppc_importer/src/: backuppc_client.rs  backuppc_manifest.rs  main.rs
cli-rs/: Cargo.toml
cli-rs/src/: console.rs  wssync.rs
cli-rs/src/commands/: client.rs  file_manifest.rs  mod.rs  mount.rs  pool.rs  read_protobuf.rs  resolve.rs
cli-rs/src/filesystem/: mod.rs
client/: codegen.yml  graphql.schema.json  package-lock.json  package.json  (+2 more)
client-rs/: Cargo.toml
client-rs/debian/: config.yaml  service
client-rs/src/: client_daemon.rs
client-sync/: .dockerignore  .envrc  .gitignore  CMakeLists.txt  Dockerfile  README.md
client-sync/certs/: query.sh  rootCA.key  rootCA.srl  server.csr  server.csr.cnf  server.key  v3.ext
client-sync/src/: CMakeLists.txt
client-sync/src/client_daemon/: CMakeLists.txt  client.cpp  client.proto  clientconfig.h  command.cpp  command.h  path_config.h.in  service.cpp  service.h  state.plantuml  woodstockclient.cpp  woodstockclient.h
client-sync/src/client_daemon/request-client/: grpc-request-client-exception.h  grpc-request-client.cpp  http2-request-client-exception.h  http2-request-client.cpp  request-client-impl.h  request-client.cpp
client-sync/src/client_daemon/walk/: file-walker.cpp  file-walker.h
client-sync/src/lib/: CMakeLists.txt  woodstock.proto
client-sync/src/lib/devices/: qstdstream.h  sha256device.h  zlibdevice.cpp  zlibdevice.h
client-sync/src/lib/interface/: configuration.cpp  configuration.h  configuration_p.h  file-manifest.h  file_manifest_p.h
client-sync/src/lib/manifest/: indexmanifest.cpp  indexmanifestentry.cpp  indexmanifestentry.h  indexmanifestentry_p.h  manifest_wrapper.cpp
client-sync/src/lib/pool/: pool-chunk-refcnt.cpp  pool-chunk-wrapper.cpp  pool-chunk-wrapper.h  pool.cpp  pool.h
client-sync/src/lib/protobuf/: group_grpc.cpp  group_grpc.h
client-sync/src/lib/utils/: qstringhash.h  readfile.h  sha256.cpp  sha256.h  tempfilename.cpp  tempfilename.h
client-sync/src/server/: CMakeLists.txt  server.cpp  woodstockserver.cpp  woodstockserver.h
client-sync/src/server/request-server/: grpc-request-server-exception.h  grpc-request-server.cpp  grpc-request-server.h  http2-request-server-exception.h  http2-request-server.cpp  http2-request-server.h  request-server-impl.h  request-server.cpp  request-server.h
client-sync/src/tools/readindex/: CMakeLists.txt  readindex.cpp
client-sync/tests/: CMakeLists.txt
client-sync/tests/client_daemon/: CMakeLists.txt
client-sync/tests/client_daemon/walk/: file-walker-test.cpp  file-walker-test.h
client-sync/tests/lib/: CMakeLists.txt
client-sync/tests/lib/utils/: sha256-bench.cpp  sha256-bench.h
clientrs/: Cargo.toml  build.rs  woodstock.proto
clientrs/data/: home.filelist  private_key.pem  public_key.pem  test.journal
clientrs/src/: client_daemon.rs  console.rs  lib.rs  wssync.rs
clientrs/src/authentification/: authentification.rs  encryption.rs  mod.rs
clientrs/src/client/: authentification.rs  config.rs  grpc_logger.rs  mod.rs  server.rs
clientrs/src/commands/: client.rs  exexcute_command.rs  file_manifest.rs  mod.rs  pool.rs  read_chunk.rs  read_protobuf.rs
clientrs/src/config/: backups.rs  config.rs  constants.rs  hosts.rs  mod.rs  model.rs
clientrs/src/manifest/: file_manifest.rs  file_manifest_reader.rs  index_manifest_model.rs  manifest.rs  mod.rs
clientrs/src/pool/: fsck.rs  lock.rs  mod.rs  pool_chunk_wrapper.rs  refcnt.rs  utils.rs
clientrs/src/proto/: mod.rs  protobuf_reader.rs  protobuf_writer.rs
clientrs/src/scanner/: file_browser.rs  file_reader.rs  mod.rs
clientrs/src/server/: backup_client.rs  client.rs  grpc_client.rs  mod.rs  progression.rs
clientrs/src/statistics/: mod.rs
clientrs/src/utils/: mod.rs
clientrs/tests/: tests_client.rs  tests_server.rs
shared-rs/: .gitignore  Cargo.toml  build.rs  index.d.ts  package-lock.json  package.json
shared-rs/.github/workflows/: CI.yml
shared-rs/npm/darwin-x64/: README.md  package.json
shared-rs/npm/linux-x64-gnu/: README.md  package.json
shared-rs/npm/linux-x64-musl/: package.json
shared-rs/npm/win32-x64-msvc/: README.md  package.json
shared-rs/src/: index_manifest_model.rs  lib.rs  log.rs  manifest_model.rs  protobuf_service.rs
shared-rs/src/config/: context.rs
shared-rs/src/events/: mod.rs  model.rs
shared-rs/src/models/: model.rs
shared-rs/src/server/: abort_handle.rs  mod.rs  remove.rs  resolve.rs  tools.rs
shared-rs/src/services/: backups.rs  files.rs  hosts.rs  mod.rs  pool.rs
shared-rs/src/utils/: encryption.rs
woodstock-rs/: Cargo.toml  build.rs  woodstock.proto
woodstock-rs/src/: lib.rs
woodstock-rs/src/client/: authentification.rs  config.rs  mod.rs  resolve.rs  server.rs
woodstock-rs/src/config/: config.rs  constants.rs  mod.rs  model.rs
woodstock-rs/src/events/: mod.rs
woodstock-rs/src/manifest/: file_manifest.rs  file_manifest_reader.rs  manifest.rs  mod.rs
woodstock-rs/src/pool/: lock.rs  mod.rs  pool_chunk_information.rs  pool_chunk_wrapper_writer.rs  pool_refcnt.rs  refcnt.rs
woodstock-rs/src/proto/: protobuf_reader.rs  protobuf_writer.rs
woodstock-rs/src/scanner/: file_browser.rs  file_reader.rs
woodstock-rs/src/server/: backup_client.rs  backup_remove.rs  client.rs  grpc_client.rs  mod.rs  pool_fsck.rs  resolve.rs  tools.rs
woodstock-rs/src/statistics/: mod.rs  statistics.rs
woodstock-rs/src/utils/: encryption.rs  lock.rs  mod.rs  path.rs
woodstock-rs/src/view/: mod.rs
woodstock-rs/tests/: tests_client.rs  tests_server.rs
(+918 files in other folders)
