[workspace]
members = [
  "backuppc-importer-rs",
  "cli-rs",
  "client-rs",
  "shared-rs",
  "woodstock-rs",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.metadata.cross.build]
pre-build = ["apt-get install -y protobuf-compiler"]
