[package]
name = "ws_backuppc_importer"
description = "Woodstock BackupPC Importer"
version = "2.0.0-alpha.19"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "^0.3"
async-trait = "^0.1"
backuppc_pool_reader = "^2.0"
clap = { version = "^4.5", features = ["derive"] }
color-eyre = "^0.6"
console = "^0.15"
env_logger = "^0.11"
eyre = "^0.6"
futures = "^0.3"
indicatif = "^0.17"
log = { version = "^0.4", default-features = false, features = [
  "std",
  "max_level_debug",
  "release_max_level_info",
] }
lru = "^0.12"
sha3 = "^0.10"
tokio = "^1.40"
tokio-stream = "^0.1"
woodstock-rs = { path = "../woodstock-rs", default-features = false, features = [
  "server",
] }
