[package]
name = "ws_backuppc_importer"
version = "1.0.0"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
woodstock_client-rs = { path = "../clientrs", default-features = false, features = [
  "server",
] }
async-stream = "0.3.5"
async-trait = "0.1.80"
backuppc_pool_reader = "^1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
env_logger = "0.11.3"
futures = "0.3.30"
indicatif = "0.17.8"
log = { version = "0.4.21", default-features = false, features = [
  "std",
  "max_level_debug",
  "release_max_level_info",
] }
tokio = "1.37.0"
lru = "0.12.3"
tokio-stream = "0.1.15"
color-eyre = "0.6.3"
eyre = "0.6.12"
sha3 = "0.10.8"
