[package]
name = "woodstock-cli-rs"
description = "Woodstock Tools"
version = "2.0.0-alpha.17"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]

[[bin]]
name = "ws_console"
path = "src/console.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "ws_sync"
path = "src/wssync.rs"

[dependencies]
async-stream = "^0.3"
clap = { version = "^4.5", features = ["derive"] }
color-eyre = "^0.6"
console = "^0.15"
env_logger = "^0.11"
eyre = "^0.6"
flate2 = { version = "^1.0" }
futures = "^0.3"
hex = { version = "^0.4", features = ["serde"] }
indicatif = "^0.17"
log = { version = "^0.4", default-features = false, features = ["std", "max_level_debug", "release_max_level_info"] }
multi_log = "^0.1"
tokio = { version = "^1.40", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "^0.7"
tonic = { version = "^0.12", features = ["tls", "gzip"] }
woodstock-rs = { path = "../woodstock-rs", default-features = false, features = [
  "pool", "server", "client"
] }

