[package]
name = "woodstock-client-rs"
description = "Woodstock client daemon"
version = "2.0.0-alpha.9"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
conf-files = ["/etc/woodstock/config.yml"]
assets = [
    # binary
    ["target/release/ws_client_daemon", "usr/bin/", "755"],
    # assets
    ["debian/config.yaml", "/etc/woodstock/config.yaml", "0600"],
]

[package.metadata.deb.variants.debug]
assets =  [
    # binary
    ["target/debug/ws_client_daemon", "usr/bin/", "755"],
    # assets
    ["debian/config.yaml", "/etc/woodstock/config.yaml", "0600"],
]


[[bin]] # Bin to run the HelloWorld gRPC server
name = "ws_client_daemon"
path = "src/client_daemon.rs"

[dependencies]
async-stream = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
eyre = "0.6.12"
log = { version = "0.4.21", default-features = false, features = ["std", "max_level_debug", "release_max_level_info"] }
multi_log = "0.1.2"
simple-logging = "2.0.2"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.11", features = ["tls", "gzip"] }
woodstock-rs = { path = "../woodstock-rs", default-features = false, features = [
  "client",
] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
