[package]
name = "woodstock_client-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["all"]

acl = ["dep:posix-acl"]
xattr = ["dep:xattr"]

client = ["dep:shlex"]
pool = []
server = ["pool"]

all = ["client", "pool", "server", "acl", "xattr"]

[lib]
name = "woodstock"
path = "src/lib.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "client"
path = "src/client_daemon.rs"
required-features = ["client"]

[[bin]]
name = "console"
path = "src/console.rs"
required-features = ["pool", "client"]

[[bin]] # Bin to run the HelloWorld gRPC server
name = "ws_sync"
path = "src/wssync.rs"
required-features = ["server"]

[dependencies]
tempfile = "3"
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio-stream =  "0.1"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hostname = "0.3.1"
dirs = "5.0.1"
rand = "0.8.5"
hex = { version = "0.4.3", features = ["serde"] }
jsonwebtoken = "9.3.0"
rsa = "0.9.6"
sha2 = "0.10.8"
shlex = { version = "1.3.0", optional = true }
globset = "0.4.14"
futures = "0.3.30"
async-walkdir = "1.0.0"
sha3 = "0.10.8"
lazy_static = "1.4.0"
log = { version = "0.4.21", features = ["std", "max_level_debug", "release_max_level_info"] }
crossbeam-channel = "0.5.12"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
serde_with = { version = "3.7.0", features = ["hex", "base64"] }
base64 = "0.22.0"
flate2 = { version = "1.0.28" }
percent-encoding = "2.3.1"
async-compression = { version = "0.4.8", features = ["zlib", "tokio"] }
indicatif = "0.17.8"
console = "0.15.8"
multi_log = "0.1.2"
stream-cancel = "0.8.2"
tokio-util = "0.7.11"
bytes = "1.6.0"
color-eyre = "0.6.3"
eyre = "0.6.12"

[dev-dependencies]
tokio-stream =  { version = "0.1", features = ["net"] }
tower = { version = "0.4" }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = { version = "1.0.28", default-features=false, features = ["zlib-ng"] }
nix = "0.28.0"
xattr = { version = "1.3.1", optional = true }
posix-acl = { version= "1.2.0", optional = true }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
