[package]
edition = "2021"
name = "woodstock_shared-rs"
version = "2.0.0-alpha.20"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
futures-util = "^0.3"
log = { version = "^0.4", default-features = false, features = [
  "std",
  "max_level_debug",
  "release_max_level_info",
] }
napi = { version = "^2.16", default-features = false, features = [
  "napi8",
  "tokio_rt",
] }
napi-derive = "^2.16"
tokio = "^1.40"
uuid = { version = "^1.10", features = ["v4"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
woodstock-rs = { path = "../woodstock-rs", default-features = false, features = [
  "server",
] }

[build-dependencies]
napi-build = "^2.1"
