[package]
name = "woodstock-rs"
description = "Woodstock Access Library"
version = "2.0.0-alpha.10"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
maintainer-scripts = "debian/"
systemd-units = { enable = true }

[features]
default = ["all"]

acl = ["dep:posix-acl"]
xattr = ["dep:xattr"]

client = ["dep:shlex"]
pool = []
server = ["pool"]

all = ["client", "pool", "server", "acl", "xattr"]

[lib]
name = "woodstock"
path = "src/lib.rs"

[dependencies]
async-compression = { version = "0.4.8", features = ["zlib", "tokio"] }
async-stream = "0.2"
async-walkdir = "1.0.0"
base64 = "0.22.0"
bytes = "1.6.0"
crossbeam-channel = "0.5.12"
dirs = "5.0.1"
dns-lookup = "2.0.4"
eyre = "0.6.12"
flate2 = { version = "1.0.28" }
futures = "0.3.30"
globset = "0.4.14"
hex = { version = "0.4.3", features = ["serde"] }
hostname = "0.3.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
mdns-sd = "0.11.3"
log = { version = "0.4.21", default-features = false, features = ["std", "max_level_debug", "release_max_level_info"] }
percent-encoding = "2.3.1"
prost = "0.12"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_path_serializer = "1.0.0"
serde_with = { version = "3.7.0", features = ["hex", "base64"] }
serde_yaml = "0.9"
sha2 = "0.10.8"
sha3 = "0.10.8"
shlex = { version = "1.3.0", optional = true }
stream-cancel = "0.8.2"
tempfile = "3"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream =  "0.1"
tokio-util = "0.7.11"
tonic = { version = "0.11", features = ["tls", "gzip"] }
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.28.0"
xattr = { version = "1.3.1", optional = true }
posix-acl = { version = "1.2.0", optional = true }
flate2 = { version = "1.0.28", default-features = false, features = ["zlib-ng"] }

[target.'cfg(target_env = "musl")'.dependencies]
libm = "0.2.8"

[dev-dependencies]
test-log = "0.2.16"
tokio-stream =  { version = "0.1", features = ["net"] }
tower = { version = "0.4" }

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"
