[package]
name = "woodstock-rs"
description = "Woodstock Access Library"
version = "2.0.0-alpha.19"
edition = "2021"
authors = ["Ulrich Vandenhekke"]
license = "MIT"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
maintainer-scripts = "debian/"
systemd-units = { enable = true }

[features]
default = ["all"]

acl = ["dep:posix-acl"]
xattr = ["dep:xattr"]

client = ["dep:shlex"]
pool = []
server = ["pool"]

all = ["client", "pool", "server", "acl", "xattr"]

[lib]
name = "woodstock"
path = "src/lib.rs"

[dependencies]
async-compression = { version = "^0.4", features = ["zlib", "tokio"] }
async-stream = "^0.3"
async-walkdir = "^2.0"
base64 = "^0.22"
bytes = "^1.7"
crossbeam-channel = "^0.5"
dirs = "^5.0"
dns-lookup = "^2.0"
eyre = "^0.6"
flate2 = { version = "^1.0" }
futures = "^0.3"
globset = "^0.4"
hex = { version = "^0.4", features = ["serde"] }
hostname = "^0.4"
jsonwebtoken = "^9.3"
lazy_static = "^1.5"
mdns-sd = "^0.11"
log = { version = "^0.4", default-features = false, features = ["std", "max_level_debug", "release_max_level_info"] }
percent-encoding = "^2.3"
prost = "^0.13"
rand = "^0.8"
rsa = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_path_serializer = "^1.0"
serde_with = { version = "^3.9", features = ["hex", "base64"] }
serde_yaml = "^0.9"
sha2 = "^0.10"
sha3 = "^0.10"
shlex = { version = "^1.3", optional = true }
stream-cancel = "^0.8"
tempfile = "^3"
tokio = { version = "^1.40", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream =  "^0.1"
tokio-util = "0.7"
tonic = { version = "^0.12", features = ["tls", "gzip"] }
uuid = { version = "^1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.38"
hyper-util = "0.1.9"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "^0.29"
xattr = { version = "^1.3", optional = true }
posix-acl = { version = "^1.2", optional = true }
flate2 = { version = "^1.0", default-features = false, features = ["zlib-ng"] }

[target.'cfg(target_env = "musl")'.dependencies]
libm = "^0.2"

[dev-dependencies]
test-log = "^0.2"
tokio-stream =  { version = "^0.1", features = ["net"] }
tower = { version = "^0.5" }

[build-dependencies]
prost-build = "^0.13"
tonic-build = "^0.12"
